Changed java version to 1.7. Using DatatypeConverter instead of Base64 for encoding.